lib 依赖，编译报错 修复

--- a/build_aar.gradle
+++ b/build_aar.gradle
@@ -51,14 +51,12 @@ afterEvaluate {
                 groupId = rootProject.zixieGroupId
                 artifactId = rootProject.zixieModuleInfo[moduleName].get("artifactId")
                 version = rootProject.zixieModuleInfo[moduleName].get("version") + sonatypeRepositoryVersion
-                if (moduleName == "RouterCompiler"){
+                if (moduleName == "RouterCompiler") {
                     from components.java
                     artifact sourcesJar
                     artifact javadocJar
-                }else {
-                    artifact("$buildDir/outputs/aar/${moduleName}-release.aar") {
-                        builtBy tasks.getByPath("assembleRelease")
-                    }
+                } else {
+                    from components.release
                 }
 
                 signing {
@@ -66,6 +64,7 @@ afterEvaluate {
                 }
 
                 pom {
+
                     name = moduleName
                     description = "Android APP Factory"
                     url = "https://android.bihe0832.com/doc/"
