--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,11 +11,11 @@ ext.mainProject = "APPTest"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前设计到Android Support库的有：
- *      LibDeviceNetwork,LibFile,LibFragmentation_core,LibFlycoTabLayout,LibQRCode,LibAdapter,LibDialog,LibCustomView,LibViewExt,LibViewPager,LibImmersive,LibTextView
+ *      LibDeviceNetwork,LibFile,LibFragmentation_core,LibFlycoTabLayout,LibQRCode,LibAdapter,LibDialog,LibBottomTab,LibViewExt,LibViewPager,LibImmersive,LibTextView
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibBottomTab"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.2.19"
+ext.moduleVersionName = "5.3.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -43,8 +43,7 @@ ext.moduleInfo = [
                 "version"                : "",
                 "artifactId"             : "",
                 "apidependenciesList"    : [
-                        "Application", "CommonDebug",
-                        "BaseDebug"
+                        "Application", "BaseDebug"
                 ],
                 "specialdependenciesList": [
                         "kapt": [
@@ -57,7 +56,6 @@ ext.moduleInfo = [
                 "artifactId"         : "",
                 "apidependenciesList": [
                         "Application", "CommonDebug",
-                        "aceeditor"
                 ]
         ],
         "Application"               : [
@@ -85,7 +83,23 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "CommonFeedback", "CommonWebview", "CommonSplash", "CommonPhotos",
                         "CommonNetwork", "CommonPraise", "CommonAbout", "CommonList",
-                        "CommonCoroutines", "CommonDataCenter", "CommonImage", "CommonAceEditor"
+                        "CommonCoroutines", "CommonDataCenter", "CommonImage", "CommonAceEditor",
+                        "CommonSvga", "CommonBottomTab"
+                ]
+        ],
+        "CommonBottomTab"           : [
+                "version"            : "5.2.13",
+                "artifactId"         : "common-bottom-tab",
+                "apidependenciesList": [
+                        "CommonSvga"
+                ]
+        ],
+        "CommonSvga"                : [
+                "version"            : "5.2.13",
+                "artifactId"         : "common-svga",
+                "apidependenciesList": [
+                        "Framework",
+                        "com.github.yyued:SVGAPlayer-Android:2.6.1"
                 ]
         ],
         "CommonAceEditor"           : [
@@ -215,9 +229,9 @@ ext.moduleInfo = [
                 "artifactId"         : "lib-uiutils",
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
-                        "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibCustomView",
+                        "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibBottomTab",
                         "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission",
-                        "LibImmersive", "LibFileSelect", "LibFloatview", "LibTextView", "LibAceEditor", "LibViewPager"
+                        "LibImmersive", "LibFileSelect", "LibFloatview", "LibTextView", "LibAceEditor", "LibViewPager", "LibSvga"
                 ]
         ],
         "LibUtils"                  : [
@@ -486,9 +500,9 @@ ext.moduleInfo = [
                         "LibImage", "LibAPK", "LibCommonUtils"
                 ]
         ],
-        "LibCustomView"             : [
+        "LibBottomTab"              : [
                 "version"            : "5.1.7",
-                "artifactId"         : "lib-custom-view",
+                "artifactId"         : "lib-bottom-tab",
                 "apidependenciesList": [
                         "LibAndroid", "LibOS",
                         "${project.androidsupport.androidxcore}",
@@ -566,7 +580,7 @@ ext.moduleInfo = [
                 "artifactId"             : "lib-float-view",
                 "apidependenciesList"    : [
                         "${project.androidsupport.constraintlayout}",
-                        "LibLog", "LibConfig", "LibThread", "LibOS", "LibDialog", "LibToast", "LibPermission", "LibAAF", "LibCustomView"
+                        "LibLog", "LibConfig", "LibThread", "LibOS", "LibDialog", "LibToast", "LibPermission", "LibAAF"
                 ],
                 "specialdependenciesList": [
                         "kapt": [
