--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibCommonUIUtils"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.3.26"
+ext.moduleVersionName = "5.4.0"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -84,14 +84,21 @@ ext.moduleInfo = [
                         "CommonFeedback", "CommonWebview", "CommonSplash", "CommonPhotos",
                         "CommonNetwork", "CommonPraise", "CommonAbout", "CommonList",
                         "CommonCoroutines", "CommonDataCenter", "CommonImage", "CommonAceEditor",
-                        "CommonSvga", "CommonBottomTab", "CommonNavigationDrawer"
+                        "CommonSvga", "CommonBottomTab", "CommonNavigationDrawer", "CommonShare"
+                ]
+        ],
+        "CommonShare"               : [
+                "version"            : "5.3.23",
+                "artifactId"         : "common-share",
+                "apidependenciesList": [
+                        "Framework"
                 ]
         ],
         "CommonNavigationDrawer"    : [
                 "version"            : "5.3.23",
                 "artifactId"         : "common-navigation-drawer",
                 "apidependenciesList": [
-                        "CommonList","CommonAbout"
+                        "CommonList", "CommonAbout"
                 ]
         ],
         "CommonBottomTab"           : [
