--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 android:name="com.bihe0832.android.app.about.AboutActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
-                android:theme="@style/activityTheme" />
+                android:theme="@style/AAF.ActivityTheme" />
 
         <activity android:name="com.bihe0832.android.common.webview.WebPageActivity">
 
