--- a/CommonAbout/src/main/AndroidManifest.xml
+++ b/CommonAbout/src/main/AndroidManifest.xml
@@ -7,6 +7,6 @@
                 android:name="com.bihe0832.android.common.about.AboutActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
-                android:theme="@style/activityTheme" />
+                android:theme="@style/AAF.ActivityTheme" />
     </application>
 </manifest>
