--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibOS,LibThread,LibRequest,LibSqlite,LibAAF,LibViewPager,Framework,Application"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibTextView"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "5.4.0"
+ext.moduleVersionName = "5.4.1"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -518,7 +518,7 @@ ext.moduleInfo = [
                 "version"            : "5.3.5",
                 "artifactId"         : "lib-bottom-tab",
                 "apidependenciesList": [
-                        "LibAndroid", "LibOS",
+                        "LibAndroid", "LibOS","LibTextView",
                         "${project.androidsupport.androidxcore}",
                         "${project.androidsupport.annotation}"
                 ]
