--- a/BaseDebug/src/main/AndroidManifest.xml
+++ b/BaseDebug/src/main/AndroidManifest.xml
@@ -79,7 +79,7 @@
         <activity
             android:name="com.bihe0832.android.base.debug.permission.DebugPermissionsActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:theme="@style/permissionFullscreen" />
+            android:theme="@style/AAF.ActivityTheme.Dialog" />
 
         <activity
             android:name="com.bihe0832.android.base.debug.tab.DebugCommonTabActivity"
